Update Coronavirus Tweets Analysis.ipynb

--- a/Coronavirus Tweets Analysis.ipynb
+++ b/Coronavirus Tweets Analysis.ipynb
@@ -66,10 +66,10 @@
    "outputs": [],
    "source": [
     "#Twitter credentials for the app\n",
-    "consumer_key = '4Hy3khGrehcdJbStVr17u3deH'\n",
-    "consumer_secret = '8p4CrYLjQDIvMKNpFKrs5kc19BAZtzApCHZkOyzGNQSwyhWJfe'\n",
-    "access_key  = '580177738-vhF8o0K7nxGZDBxr560mHFARIJlVWyEZLXKeq7Gc'\n",
-    "access_secret  = 'yEzzmkTHj6KIti9YoDAroHLs7gtIJj9tsgSikvQzPvWdk'\n",
+    "consumer_key = 'xxxxxxxxxxxxxxxxxxxxxxxxxx'\n",
+    "consumer_secret = 'xxxxxxxxxxxxxxxxxxxxxxxxxx'\n",
+    "access_key  = 'xxxxxxxxx-xxxxxxxxxxxxxxxxxxxxxxxxxx'\n",
+    "access_secret  = 'xxxxxxxxxxxxxxxxxxxxxxxxxx'\n",
     " \n",
     "#pass twitter credentials to tweepy\n",
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
